--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <p id="par"></p>
+        <label>logout</label>
+        <button onclick="logout()">logout</button>
     </body>
     <script>
         var checktoken = localStorage.getItem("tokenlogin")
