--- a/AddJobToDepartment.html
+++ b/AddJobToDepartment.html
@@ -4,19 +4,13 @@
         <title>Add Job Department</title>
     </head>
     <body>
-        <select id="demo">
-        </select>
+        <form id="form">
+            <select id="demo">
+            </select>
+            <select id="job">
+            </select>
+            <input type="submit" value="add">
+        </form>
     </body>
-    <script>
-        function myFunction(selector)
-{
-   var optionList="CHOOSE PRIORITY "
-    var i;
-    for (i=1;i<=5;i++){
-      selector.options[i-1] = new Option(optionList+i);
-    }
-}
-//usage:
-myFunction(document.getElementById("demo"));
-    </script>
+    <script src="js/addjobtodepartment.js"></script>
 </html>
