--- a/AddJobToDepartment.html
+++ b/AddJobToDepartment.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <form id="form">
-            <select id="demo">
+            <select id="demo" onchange="myFunction()">
             </select>
             <select id="job">
             </select>
