--- a/login.html
+++ b/login.html
@@ -8,14 +8,12 @@
         <h2>Login</h2>
         <form id="form">
             <div>
-                <input type="email" id="email" placeholder="email" required/>
+                <input type="text" id="User_name" placeholder="User name" required/>
             </div>
-            <div id="email_error">Please fill up your Email or Phone</div>
 
             <div>
-                <input type="password" id="password" placeholder="password" required/>
+                <input type="password" id="User_password" placeholder="password" required/>
             </div>
-            <div id="pass_error">Please fill up your Password</div>
             <input type="submit" value="Login">
         </form>
 
