--- a/AddMember.html
+++ b/AddMember.html
@@ -5,8 +5,9 @@
     </head>
     <body>
         <form id="form">
-            <input type="text" id="member" placeholder="addmember">
-            <input type="submit" value="ADD">
+            <select id="member">
+            </select>
+            <input type="submit" value="add">
         </form>
     </body>
     <script src="js/addmember.js"></script>
