--- a/AddJob.html
+++ b/AddJob.html
@@ -4,8 +4,9 @@
         <title>Add Job</title>
     </head>
     <body>
+        <p id="par"></p><label>logout</label><button onclick="logout()">logout</button>
         <form id="form">
-            <input type="text" id="job">
+            <input type="text" id="job" placeholder="Add Job">
             <input type="submit" value="add">
         </form>
         <script src="js/addjob.js"></script>
