--- a/AddMemberToDepartment.html
+++ b/AddMemberToDepartment.html
@@ -4,6 +4,7 @@
         <title>Add Member Department</title>
     </head>
     <body>
+        <p id="par"></p><label>logout</label><button onclick="logout()">logout</button>
         <form id="form">
             <select id="department" onchange="myFunction()">
             </select>
