--- a/AddDepartment.html
+++ b/AddDepartment.html
@@ -4,7 +4,7 @@
         <title>Add Department</title>
     </head>
     <body>
-        <p id="par"></p>
+        <p id="par"></p><label>logout</label><button onclick="logout()">logout</button>
         <form id="form">
             <input type="text" placeholder="Type Department" id="department">
             <input type="submit">
