--- a/AddJobToDepartment.html
+++ b/AddJobToDepartment.html
@@ -4,6 +4,7 @@
         <title>Add Job Department</title>
     </head>
     <body>
+        <p id="par"></p><label>logout</label><button onclick="logout()">logout</button>
         <form id="form">
             <select id="demo" onchange="myFunction()">
             </select>
