--- a/AddMember.html
+++ b/AddMember.html
@@ -4,6 +4,7 @@
         <title>Add Member</title>
     </head>
     <body>
+        <p id="par"></p><label>logout</label><button onclick="logout()">logout</button>
         <form id="form">
             <select id="member">
             </select>
