--- a/AddDepartment.html
+++ b/AddDepartment.html
@@ -4,8 +4,7 @@
         <title>Add Department</title>
     </head>
     <body>
-        <p id="par"></p><label>logout</label><button onclick="logout()">logout</button>
-        <form id="form">
+        Name: <label id="par"></label></br></br>UserName: <label id="username"></label></br></br>Department: <label id="department"></label></br></br><label>logout</label><button onclick="logout()">logout</button>        <form id="form">
             <input type="text" placeholder="Type Department" id="department">
             <input type="submit">
         </form>
