--- a/index.html
+++ b/index.html
@@ -1,30 +1,64 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title>Team Performance</title>
-        <link href="https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/table.css">
+        <link rel="stylesheet" href="css/menu-setting.css">
+        <link rel="stylesheet" href="css/navbar.css">
+        <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300&display=swap" rel="stylesheet">
     </head>
-    <br>
-        <style>
-            table, th, td {
-              border: 1px solid;
-            }
-            </style>
-        Name: <label id="par"></label></br></br>UserName: <label id="username"></label></br></br>Department: <label id="department"></label></br></br><label>logout</label><button onclick="logout()">logout</button>
-        <div id="setting"> 
+    <body>
+      <nav>
+        <h2>TeamPerformance</h2>
+        <input type="checkbox" id="active">
+        <label for="active" class="menu-btn"><span></span></label>
+        <label for="active" class="close"></label>
+        <div id="setting" class="wrapper">
+        </div>
+      </nav>
+
+
+        <section class="home-section">
+            <div class="container">
+        <br>
+        <div class="dropdown">
+            <label id="username"></label>
+            <div class="dropdown-content">
+                Name: <label id="par"></label>
+                Department: <label id="department"></label>
+                <br>
+                <button onclick="logout()">logout</button>
+            </div>
           </div>
           <select id="changedepartment" onchange="changedepartment()">
-        </select>
+          </select> 
+
+
+          <div style="  
+          margin: auto;
+          width: 40%;
+          padding: 10px;">
+            <canvas id="myChart"></canvas>
+        </div>
+
+
+        <div class="display-tables">
           <table id="mytable">
             <thead>
-                <tr>
-                    <th>Name</th>
-                </tr>
             </thead>
             <tbody>
             </tbody>
         </table>
-    </body>
-    <script src="js/home.js">
+        </div>
+    </div>
+    </section>
+
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="js/home.js"></script>
+    <script>
+        
     </script>
+    </body>
 </html>
+
