--- a/AddJob.html
+++ b/AddJob.html
@@ -7,10 +7,11 @@
         <link rel="stylesheet" href="css/navbar.css">
         <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300&display=swap" rel="stylesheet">
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <link rel="stylesheet" href="sweetalert2.min.css">
     </head>
     <body>
         <nav>
-            <h2>TeamPerformance</h2>
+            <h2><a href="./">TeamPerformance</a></h2>
             <input type="checkbox" id="active">
             <label for="active" class="menu-btn"><span></span></label>
             <label for="active" class="close"></label>
