--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
       <nav>
-        <h2>TeamPerformance</h2>
+        <h2><a href="./">TeamPerformance</a></h2>
         <input type="checkbox" id="active">
         <label for="active" class="menu-btn"><span></span></label>
         <label for="active" class="close"></label>
