--- a/Editscore.html
+++ b/Editscore.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Edit Score</title>
+        <title>Team Performance | Edit Score</title>
         <link rel="stylesheet" href="css/table.css">
         <link rel="stylesheet" href="css/menu-setting.css">
         <link rel="stylesheet" href="css/navbar.css">
