--- a/AddJob.html
+++ b/AddJob.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Add Job</title>
+        <title>Team Performance | Add Job</title>
         <link rel="stylesheet" href="css/table.css">
         <link rel="stylesheet" href="css/menu-setting.css">
         <link rel="stylesheet" href="css/navbar.css">
