--- a/loooo.html
+++ b/loooo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<title>Team Performance | Login</title>
+	<title>Animated Login Form</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
@@ -11,11 +11,11 @@
 	<img class="wave" src="img/wave.png">
 	<div class="container">
 		<div class="img">
-			<img src="img/bg4.png">
+			<img src="img/bg.svg">
 		</div>
 		<div class="login-content">
-			<form id="form">
-				<img src="img/avatar2.png">
+			<form action="index.html">
+				<img src="img/avatar.svg">
 				<h2 class="title">Welcome</h2>
            		<div class="input-div one">
            		   <div class="i">
@@ -23,7 +23,7 @@
            		   </div>
            		   <div class="div">
            		   		<h5>Username</h5>
-                        <input type="text" class="input" id="User_name" required/>
+           		   		<input type="text" class="input">
            		   </div>
            		</div>
            		<div class="input-div pass">
@@ -32,15 +32,14 @@
            		   </div>
            		   <div class="div">
            		    	<h5>Password</h5>
-                        <input type="password" class="input" id="User_password" required/>
+           		    	<input type="password" class="input">
             	   </div>
             	</div>
-            	<!-- <a href="#">Forgot Password?</a> -->
-                <input type="submit" class="btn" value="Login">
+            	<a href="#">Forgot Password?</a>
+            	<input type="submit" class="btn" value="Login">
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="js/login.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
-
