--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 		<div class="login-content">
 			<form id="form">
 				<img src="img/avatar2.png">
-				<h2 class="title">Welcome</h2>
+				<h1 class="title">TeamPerformance</h1>
            		<div class="input-div one">
            		   <div class="i">
            		   		<i class="fas fa-user"></i>
