[ADD]BeginEdit,Delete

--- a/EditJob.html
+++ b/EditJob.html
@@ -30,24 +30,16 @@
                 <br>
                 <button onclick="logout()">logout</button>
             </div>
-          </div>        
-        <form id="form">
+          </div>
+          <form id="form">
             <div class="input-center">
-                <input type="text" id="job" placeholder="Add Job">
-                <input type="submit" value="Add">
+                ID:<label id="idjob">1</label>
+                <input type="text" id="editjob" placeholder="Edit Job">
+                <input type="submit" value="Edit">
             </div>
-        </form>
-        <div class="display-tables">
-          <table id="mytable">
-            <thead>
-            </thead>
-            <tbody>
-            </tbody>
-        </table>
-        </div>
+        </form>        
     </div>
     </section>
-        <script src="js/addjob.js"></script>
-
+        <script src="js/editjob.js"></script>
     </body>
 </html>
