--- a/AddMember.html
+++ b/AddMember.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/menu-setting.css">
         <link rel="stylesheet" href="css/navbar.css">
         <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300&display=swap" rel="stylesheet">
+        <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <link rel="stylesheet" href="sweetalert2.min.css">
     </head>
