[UPDATE]Edit membertodepartment

--- a/AddDepartment.html
+++ b/AddDepartment.html
@@ -37,7 +37,7 @@
           </div>   
         <form id="form">
             <div class="input-center">
-                <input type="text" placeholder="Type Department" id="department">
+                <input type="text" placeholder="Type Department" id="adddepartment">
                 <input type="submit">
             </div>
         </form>
