[UPDATE]Edit membertodepartment

--- a/AddMemberToDepartment.html
+++ b/AddMemberToDepartment.html
@@ -81,9 +81,11 @@
                       <span class="closes">&times;</span>
                       <!-- <p>Some text in the Modal..</p> -->
                       <div class="input-center">
+                        <span>Department</span>
                         <input type="text" id="inputdepartment" disabled="disabled">
                       </div>
                       <div class="input-center">
+                        <span>Member</span>
                         <input type="text" id="inputmember" disabled="disabled">
                      </div>
 
