--- a/AddJobToDepartment.html
+++ b/AddJobToDepartment.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="css/menu-setting.css">
         <link rel="stylesheet" href="css/navbar.css">
         <link href="https://fonts.googleapis.com/css2?family=Mitr:wght@200;300&display=swap" rel="stylesheet">
+        <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
         <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <link rel="stylesheet" href="sweetalert2.min.css">
     </head>
@@ -19,6 +20,31 @@
             </div>
           </nav>
             <section class="home-section">
+                <div id="myModal" class="modal">
+                    <div class="modal-content">
+                      <span class="closes">&times;</span>
+                      <!-- <p>Some text in the Modal..</p> -->
+                      <div class="input-center">
+                        <span>Department</span>
+                        <input type="text" id="inputdepartment" disabled="disabled">
+                      </div>
+                      <div class="input-center">
+                        <span>Job</span>
+                        <input type="text" id="inputjob" disabled="disabled">
+                     </div>
+
+                      <div class="input-center">
+                        <select id="editdepartment" onchange="editjobdepartment()"></select>
+                      </div>
+                      <div class="input-center">
+                        <select id="editjob"></select>
+                      </div>
+                      <div class="input-center">
+                        <button onclick="editsubmit()">Submit</button>
+                        <button onclick="cancel()" class="delete">Cancel</button>
+                    </div>
+                    </div>
+                  </div>
                 <div class="container">
             <br>
             <div class="dropdown">
